# fastAPI_vod

./: pyproject.toml
1일차/fastapi_assignment/: main.py
1일차/fastapi_assignment/app/schema/: users.py
2일차/: ci.yml  temp_py.html
2일차/htmlcov/: class_index.html  function_index.html  index.html  pyproject.toml  status.json
3일차/: asgi.py  pyproject.toml
3일차/app/: __init__.py
3일차/app/apis/v1/: meeting_router.py
3일차/app/dtos/: create_meeting_response.py
3일차/app/utils/: base62.py  squids.py
3일차/htmlcov/: class_index.html  status.json  temp_py.html
4일차/: pyproject.toml
4일차/app/: __init__.py
4일차/app/configs/: __init__.py  base_config.py
4일차/app/dtos/: frozen_config.py
4일차/app/tests/apis/v1/: meeting_router.py  test_meeting_router_mysql.py
4일차/app/tortoise_models/: base_model.py
4일차/app/utils/: base62.py
4일차/htmlcov/: function_index.html  index.html  test_temp_py.html
4일차/migrations/models/: 0_20250821153633_init.py
